Removed publication_year and title_and_authors fields from API response text object.
Publication_year can be extracted from orig_publication_date and title_and_authors is a concatenation of title and author_string columns
