# app/openapi.yaml
@@ -270,8 +270,6 @@ components:
                     items:
                       type: integer
                     description: ID numbers of all authors involved with the text (most often only one)
-                  title_and_authors:
-                    type: string
                   impressions_count:
                     type: integer
                     description: total number of times the text was viewed or printed
@@ -292,8 +290,6 @@ components:
                   place_and_publisher:
                     type: string
                   raw_publication_date:
-                    type: string
-                  publication_year:
                     type: string
               enrichment:
                 type: object
